update swagger docs, remove obsolete code
